# qrkey

./: pyproject.toml
.github/workflows/: continuous-integration.yml
js/: README.md  package-lock.json  package.json  webpack.config.js
js/src/: index.js  qrkey.js
js/src/components/: PinForm.js  QrKeyForm.js
js/src/hooks/: mqtt.js  qrkey.js
js/src/utils/: crypto.js  storage.js  version.js
qrkey/: __about__.py  crypto.py  mqtt.py  settings.py
qrkey/tests/: test_api.py
qrkey/ui/: package-lock.json
qrkey/ui/src/: PinCode.js  PinCode.test.js
utils/hooks/: sdist.py  wheel.py
