[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrkey"
dynamic = ["version"]
description = "Swarm robotics deployments made easy."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-clause"
keywords = ["swarm", "robotics", "ux"]
authors = [
  { name = "Alexandre Abadie", email = "alexandre.abadie@inria.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/DotBots/qrkey#readme"
Issues = "https://github.com/DotBots/qrkey/issues"
Source = "https://github.com/DotBots/qrkey"

[tool.hatch.version]
path = "python/qrkey/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:python/tests}"
test-cov = "coverage run -m pytest {args:python/tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:python/qrkey python/tests}"

[tool.coverage.run]
source_pkgs = ["qrkey", "python/tests"]
branch = true
parallel = true
omit = [
  "python/qrkey/__about__.py",
]

[tool.coverage.paths]
qrkey = ["python/qrkey", "*/qrkey/python/qrkey"]
tests = ["python/tests", "*/qrkey/python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
